folded navigation open/close + updated theme changer z-index.. Note: Make sure nothing in the page will ever have a z-index bigger than 998, otherwise menu close overlay will not work and everything will stuck..

--- a/src/app/core/theming/theme-changer/theme-changer.less
+++ b/src/app/core/theming/theme-changer/theme-changer.less
@@ -2,7 +2,7 @@
     position: absolute;
     bottom: 8px;
     right: 8px;
-    z-index: 9999;
+    z-index: 997;
 
     md-fab-speed-dial {
 
