--- a/src/app/sidenav/navigation/navigation.less
+++ b/src/app/sidenav/navigation/navigation.less
@@ -213,6 +213,16 @@
                 margin-left: @navigationFoldedWidth;
             }
 
+            #navigation-fold-close-overlay {
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                background: transparent;
+                z-index: 998;
+            }
+
             #navigation {
 
                 &.folded {
@@ -221,6 +231,7 @@
                     left: 0;
                     bottom: 0;
                     transition: width 0.1s linear, min-width 0.1s linear, max-width 0.1s linear;
+                    z-index: 999;
 
                     &:not(.folded-open) {
                         width: @navigationFoldedWidth;
@@ -270,6 +281,15 @@
                                 }
                             }
                         }
+                    }
+
+                    #navigation-fold-open-overlay {
+                        position: absolute;
+                        top: 0;
+                        right: 0;
+                        bottom: 0;
+                        left: 0;
+                        z-index: 999;
                     }
                 }
             }
